--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
        </section>
        <div class="footer__brand">
         <img src="images/logo.svg" alt="">
-        <p class="footer__copyright">Copyright 2020 PETIT Mackenson</p>
+        <p class="footer__copyright">Copyright 2023 Petit Mackenson</p>
        </div>
      </div>
   </footer>
